Add D3-007.html + update stylesheet

--- a/stylesheets/d3.slider.css
+++ b/stylesheets/d3.slider.css
@@ -8,8 +8,11 @@
 }
 
 .d3slider-rect-range {
-  fill: #777;
-  stroke: none;
+  fill: none;
+  stroke: #333;
+  stroke-width: 0.5px;
+  height:3px;
+  transform:translate(0, 5px);
 }
 
 .d3slider-rect-value {
