--- a/stylesheets/d3.slider.css
+++ b/stylesheets/d3.slider.css
@@ -2,8 +2,9 @@
   z-index: 2;
   background:none;
   position:fixed;
-  width:50%;
-  left:50px;
+  width:90%;
+  left:5%;
+  right:5%;
   bottom:50px;
 }
 
