--- a/hub/css/test.css
+++ b/hub/css/test.css
@@ -310,7 +310,11 @@ img {
 }
 
 .page-link:hover .page-bgimg {
-	outline:150px solid rgba(0,0,0,.7);
+	outline:150px solid rgba(0,0,0,.5);
+	-webkit-filter: blur(5px);
+	   -moz-filter: blur(5px);
+		 -o-filter: blur(5px);
+			filter: blur(5px);
 }
 
 .page-link:hover .page-text {
@@ -325,7 +329,7 @@ img {
 	width:100%;
 	outline:100px solid rgba(0,0,0,0);
 	outline-offset: -150px;
-	transition:outline .2s ease;
+	transition:outline .2s ease, -webkit-filter 1s ease, -o-filter 1s ease, -moz-filter 1s ease, filter 1s ease
 
 }
 
@@ -336,7 +340,7 @@ img {
 	transition:opacity .4s ease;
 	font-family: 'Circular Std', helvetica, sans-serif;
 	color:white;
-	text-shadow: 0px 0px 2px #444;
+	text-shadow: 0px 0px 2px rgba(0,0,0,.2);
 	box-sizing:border-box;
 	padding:3rem 2rem;
 	font-size:15px;
